// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VCard.vue should render a card with custom height 1`] = `

<div class="v-card theme--light"
     style="height: 400px;"
>
</div>

`;

exports[`VCard.vue should render a flat card 1`] = `

<div class="v-card v-card--flat theme--light">
</div>

`;

exports[`VCard.vue should render a raised card 1`] = `

<div class="v-card v-card--raised theme--light">
</div>

`;

exports[`VCard.vue should render a tile card 1`] = `

<div class="v-card v-card--tile theme--light">
</div>

`;

exports[`VCard.vue should render a tile card 2`] = `

<div class="v-card v-card--tile theme--light">
</div>

`;

exports[`VCard.vue should render card with img 1`] = `

<div class="v-card theme--light">
</div>

`;

exports[`VCard.vue should render component and match snapshot 1`] = `

<div class="v-card theme--light">
</div>

`;
